--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,12 +83,9 @@ protobuf {
 def canonicalVersionCode = 612
 def canonicalVersionName = "4.57.1"
 
-def postFixSize = 10
+def postFixSize = 2
 def abiPostFix = ['universal'   : 0,
-                  'armeabi-v7a' : 1,
-                  'arm64-v8a'   : 2,
-                  'x86'         : 3,
-                  'x86_64'      : 4]
+                  'arm64-v8a'   : 2]
 
 android {
     flavorDimensions "none"
@@ -131,19 +128,12 @@ android {
         buildConfigField "int", "CANONICAL_VERSION_CODE", "$canonicalVersionCode"
 
         ndk {
-            //abiFilters 'arm64-v8a'
+            abiFilters 'arm64-v8a'
         }
+
+        ndkVersion "21.0.6113669"
 
         resConfigs autoResConfig()
-
-        splits {
-            abi {
-                enable true
-                reset()
-                include 'arm64-v8a'
-                universalApk false
-            }
-        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -161,6 +151,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/proguard/androidx-annotations.pro'
+        pickFirst 'lib/arm64-v8a/libnative-utils.so'
     }
 
     buildTypes {
@@ -207,7 +198,14 @@ android {
         }
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles = buildTypes.debug.proguardFiles
+        }
+    }
+
+    externalNativeBuild {
+        ndkBuild {
+            path file("jni/Android.mk")
         }
     }
 
@@ -276,13 +274,6 @@ android {
             enable true
             reset()
             include "xxhdpi"
-        }
-
-        abi {
-            enable true
-            reset()
-            include "arm64-v8a"
-            universalApk false
         }
     }
 }
